--- a/app/src/main/res/layout/sample_gridview_activity.xml
+++ b/app/src/main/res/layout/sample_gridview_activity.xml
@@ -1,14 +1,64 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/grid_view"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:numColumns="@integer/column_count"
-    android:scrollbarStyle="insideOverlay"
-    android:descendantFocusability="blocksDescendants"
-    android:scrollbars="none"
-    android:listSelector="@null"
-    android:clipToPadding="false"
-    android:padding="5dp"
-    />
+    android:layout_height="match_parent" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+
+
+        <GridView
+            android:id="@+id/grid_view"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:columnWidth="80dp"
+            android:gravity="center"
+            android:horizontalSpacing="2dp"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="2dp" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/morebtn"
+                android:background="@drawable/red_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="more pictures"
+                android:onClick="searchBtnHandler"/>
+
+            <Button
+                android:id="@+id/uploadbtn"
+                android:background="@drawable/red_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="upload an image"
+                android:onClick="uploadImageBtn"/>
+
+            <Button
+                android:id="@+id/streams"
+                android:background="@drawable/red_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="streams"
+                android:onClick="searchBtnHandler"/>
+
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
+
+
+</RelativeLayout>
