--- a/app/src/main/res/layout/sample_gridview_activity.xml
+++ b/app/src/main/res/layout/sample_gridview_activity.xml
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="streams"
-                android:onClick="searchBtnHandler"/>
+                android:onClick="streamBtnHandler"/>
 
 
         </LinearLayout>
