--- a/app/src/main/res/layout/all_stream_with_button.xml
+++ b/app/src/main/res/layout/all_stream_with_button.xml
@@ -52,6 +52,13 @@
                 android:text="My Subscibed Streams"
                 android:onClick="mySubStreamsHandler"/>
 
+            <Button
+                android:id="@+id/nearbystream"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nearby Streams"
+                android:onClick="nearbyStreamHandler"/>
+
 
         </LinearLayout>
     </LinearLayout>
